Add ONNX export and runtime validation for ML compute graphs
Implement OnnxExporter that converts ComputeGraph to ONNX ModelProto,
covering all 71 TensorExpr variants with proper op decomposition for
composite ops (Silu, Gelu, HardSwish, Linear, etc.). Add 51 structural
tests validating protobuf output and 21 runtime validation tests that
load exported models in ONNX Runtime and verify numerical correctness.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>